--- a/index.html
+++ b/index.html
@@ -1,55 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matthew Kin Portfolio</title>
-    <link rel="stylesheet" href="/style.css" />
-  </head>
-  <body>
-    <!-- Top Navigation Bar -->
-    <header>
-      <nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Matthew Kin Portfolio</title>
+
+  <!-- Tab icon -->
+  <link rel="icon" type="image/png" href="/rusTV.png" />
+
+  <!-- Modern font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="/style.css" />
+</head>
+
+<body>
+  <!-- Navigation -->
+  <header>
+    <nav>
+      <div class="logo">MK</div>
+      <div class="nav-links">
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
 
-    <!-- Banner Section -->
-    <section id="home" class="banner">
-      <img src="/PortfolioBanner.png" alt="Banner image" class="banner-image" />
+  <!-- Hero Banner -->
+  <section id="home" class="hero">
+    <img src="/PortfolioBanner.png" alt="Banner image" class="hero-banner">
+    <div class="hero-content">
       <h1>Matthew Kin</h1>
       <p>Computer Science Game Designer</p>
-      <button id="contactBtn">Contact Me</button>
-    </section>
+    </div>
+  </section>
 
-    <!-- Page Content -->
-    <main>
-      <section id="about">
-        <h1>About Me</h1>
-        <p>I'm a Computer Science Game Design student at UCSC. I have a passion for creating engaging and immersive gaming experiences. My skills include programming, game mechanics design, and user experience optimization. I'm always looking to collaborate on exciting projects and expand my portfolio.</p>
-      </section>
+  <!-- About Me -->
+<section id="about" class="section about-section">
+  <div class="about-container">
+    <div class="about-text">
+      <h2>About Me</h2>
+      <p>
+        I'm a Computer Science Game Design student at UCSC, passionate about creating engaging and immersive gaming experiences. My skills include programming, game mechanics design, and user experience optimization. I enjoy collaborating on exciting projects and expanding my portfolio.
+      </p>
+    </div>
+    <div class="about-image">
+      <img src="/face.png" alt="Matthew Kin" />
+    </div>
+  </div>
+</section>
 
-      <section id="projects">
-        <h2>Projects</h2>
-        <div id="projectList"></div>
-      </section>
 
-      <section id="contact">
-        <h2>Contact</h2>
-        <form id="contactForm">
-          <label>Name <input type="text" name="name" required /></label>
-          <label>Email <input type="email" name="email" required /></label>
-          <label>Message <textarea name="message" required></textarea></label>
-          <button type="submit">Send</button>
-        </form>
-        <p id="formStatus"></p>
-      </section>
-    </main>
+  <!-- Projects -->
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+    <div id="projectList" class="projects-grid"></div>
+  </section>
 
-    <!-- Vite will automatically include your TS/JS here -->
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+  <script type="module" src="/src/main.ts"></script>
+</body>
 </html>
