--- a/index.html
+++ b/index.html
@@ -52,12 +52,52 @@
   </div>
 </section>
 
+<!-- Projects Section -->
+<section id="projects" class="section projects-section">
+  <h2>Projects</h2>
+  <div class="projects-grid">
 
-  <!-- Projects -->
-  <section id="projects" class="section">
-    <h2>Projects</h2>
-    <div id="projectList" class="projects-grid"></div>
-  </section>
+    <!-- Luminara Project -->
+    <div class="project-card">
+      <div class="project-images">
+        <img src="/luminara1.png" alt="Luminara Screenshot 1">
+        <img src="/luminara2.png" alt="Luminara Screenshot 2">
+      </div>
+      <h3>Luminara - UNI Game Jam 2025</h3>
+      <p>
+        Luminara is a puzzle-platformer where you guide light through the night sky by placing stars to form constellations. 
+        These celestial patterns become traversable paths allowing you to overcome obstacles and solve environmental puzzles.
+      </p>
+      <p>
+        <strong>UNI Game Jam 2025 Results:</strong><br>
+        Fun & Engagement #3 | Theme #5 | Overall #4 | Presentation #5
+      </p>
+      <a href="https://itch.io/jam/california-uni-summer-game-jam/rate/3746145" target="_blank" class="project-link">Play Luminara</a>
+      <p>By rusTVz for Uni Jam</p>
+    </div>
+
+
+    <!-- DEADWIRED Project -->
+<div class="project-card">
+  <img src="/deadwired1.png" alt="DeadWired Game Screenshot" class="project-image">
+  <img src="/deadwired2.png" alt="DeadWired Game Screenshot" class="project-image">
+  <h3>DeadWired - Pixel Game Jam 2025</h3>
+  <p>
+    DEADWIRED is a pixel-art action-puzzler made for Pixel Game Jam 2025. You play as L1CH, a reconstructed mind in a mechanical skeleton, guided by the AI ARIS through a decaying, cyber-future. Use ReFracture Cards to manipulate your surroundings, bypass obstacles, and uncover fragments of your forgotten identity.
+  </p>
+  <p>
+    <strong>Pixel Game Jam 2025 Results:</strong><br>
+    Innovation: 21/429 | Overall: 27/429 | Pixel Art: 58/429
+  </p>
+  <p>Solo designed and developed in under 10 days. Made with Unity and C#.</p>
+  <a href="https://itch.io/jam/-pixel-game-jam-2025/rate/3573528" target="_blank" class="project-link">Play DeadWired</a>
+</div>
+
+
+
+  </div>
+</section>
+
 
   <script type="module" src="/src/main.ts"></script>
 </body>
