--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
 </section>
 
 
+<!-- Contact / Links Section -->
+<section id="contact" class="section contact-section">
+  <h2>Contact & Links</h2>
+  <div class="contact-links">
+    <p>
+      <a href="/resume.pdf" target="_blank" class="contact-link">Resume</a> | 
+      <a href="https://rustvz.itch.io/" target="_blank" class="contact-link">Itch.io</a> | 
+      <a href="mailto:mattkin101@gmail.com" class="contact-link">Email</a> | 
+      <a href="https://www.linkedin.com/in/matthew-kin/" target="_blank" class="contact-link">LinkedIn</a>
+    </p>
+  </div>
+</section>
+
+
+
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
