Finished Contacts/Fixed Styles

--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matthew Kin Portfolio</title>
 
-  <!-- Tab icon -->
-  <link rel="icon" type="image/png" href="/rusTV.png" />
-
-  <!-- Modern font -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="icon" type="image/png" href="rusTV.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 
 <body>
@@ -30,7 +24,7 @@
 
   <!-- Hero Banner -->
   <section id="home" class="hero">
-    <img src="/PortfolioBanner.png" alt="Banner image" class="hero-banner">
+    <img src="PortfolioBanner.png" alt="Banner image" class="hero-banner" />
     <div class="hero-content">
       <h1>Matthew Kin</h1>
       <p>Computer Science Game Designer</p>
@@ -38,81 +32,58 @@
   </section>
 
   <!-- About Me -->
-<section id="about" class="section about-section">
-  <div class="about-container">
-    <div class="about-text">
-      <h2>About Me</h2>
-      <p>
-        I'm a Computer Science Game Design student at UCSC, passionate about creating engaging and immersive gaming experiences. My skills include programming, game mechanics design, and user experience optimization. I enjoy collaborating on exciting projects and expanding my portfolio.
-      </p>
-    </div>
-    <div class="about-image">
-      <img src="/face.png" alt="Matthew Kin" />
-    </div>
-  </div>
-</section>
-
-<!-- Projects Section -->
-<section id="projects" class="section projects-section">
-  <h2>Projects</h2>
-  <div class="projects-grid">
-
-    <!-- Luminara Project -->
-    <div class="project-card">
-      <div class="project-images">
-        <img src="/luminara1.png" alt="Luminara Screenshot 1">
-        <img src="/luminara2.png" alt="Luminara Screenshot 2">
+  <section id="about" class="section about-section">
+    <div class="about-container">
+      <div class="about-text">
+        <h2>About Me</h2>
+        <p>
+          I'm a Computer Science Game Design student at UCSC, passionate about creating engaging and immersive gaming experiences.
+          My skills include programming, game mechanics design, and user experience optimization. I enjoy collaborating on exciting projects and expanding my portfolio.
+        </p>
       </div>
-      <h3>Luminara - UNI Game Jam 2025</h3>
-      <p>
-        Luminara is a puzzle-platformer where you guide light through the night sky by placing stars to form constellations. 
-        These celestial patterns become traversable paths allowing you to overcome obstacles and solve environmental puzzles.
-      </p>
-      <p>
-        <strong>UNI Game Jam 2025 Results:</strong><br>
-        Fun & Engagement #3 | Theme #5 | Overall #4 | Presentation #5
-      </p>
-      <a href="https://itch.io/jam/california-uni-summer-game-jam/rate/3746145" target="_blank" class="project-link">Play Luminara</a>
-      <p>By rusTVz for Uni Jam</p>
+      <div class="about-image">
+        <img src="face.png" alt="Matthew Kin" />
+      </div>
     </div>
+  </section>
 
+  <!-- Projects -->
+  <section id="projects" class="section projects-section">
+    <h2>Projects</h2>
+    <div class="projects-grid">
 
-    <!-- DEADWIRED Project -->
-<div class="project-card">
-  <img src="/deadwired1.png" alt="DeadWired Game Screenshot" class="project-image">
-  <img src="/deadwired2.png" alt="DeadWired Game Screenshot" class="project-image">
-  <h3>DeadWired - Pixel Game Jam 2025</h3>
-  <p>
-    DEADWIRED is a pixel-art action-puzzler made for Pixel Game Jam 2025. You play as L1CH, a reconstructed mind in a mechanical skeleton, guided by the AI ARIS through a decaying, cyber-future. Use ReFracture Cards to manipulate your surroundings, bypass obstacles, and uncover fragments of your forgotten identity.
-  </p>
-  <p>
-    <strong>Pixel Game Jam 2025 Results:</strong><br>
-    Innovation: 21/429 | Overall: 27/429 | Pixel Art: 58/429
-  </p>
-  <p>Solo designed and developed in under 10 days. Made with Unity and C#.</p>
-  <a href="https://itch.io/jam/-pixel-game-jam-2025/rate/3573528" target="_blank" class="project-link">Play DeadWired</a>
-</div>
+      <div class="project-card">
+        <img src="luminara1.png" alt="Luminara Screenshot" class="project-image" />
+        <h3>Luminara - UNI Game Jam 2025</h3>
+        <p>Luminara is a puzzle-platformer where you guide light through the night sky by placing stars to form constellations.</p>
+        <p><strong>UNI Game Jam 2025 Results:</strong><br>Fun & Engagement #3 | Theme #5 | Overall #4 | Presentation #5</p>
+        <a href="https://itch.io/jam/california-uni-summer-game-jam/rate/3746145" target="_blank" class="project-link">Play Luminara</a>
+        <p>By rusTVz for Uni Jam</p>
+      </div>
 
+      <div class="project-card">
+        <img src="deadwired1.png" alt="DeadWired Screenshot" class="project-image" />
+        <img src="deadwired2.png" alt="DeadWired Screenshot" class="project-image" />
+        <h3>DeadWired - Pixel Game Jam 2025</h3>
+        <p>DEADWIRED is a pixel-art action-puzzler made for Pixel Game Jam 2025. You play as L1CH, a reconstructed mind guided by the AI ARIS through a decaying cyber-future.</p>
+        <p><strong>Pixel Game Jam 2025 Results:</strong><br>Innovation: 21/429 | Overall: 27/429 | Pixel Art: 58/429</p>
+        <p>Solo designed and developed in under 10 days using Unity and C#.</p>
+        <a href="https://rustvz.itch.io/deadwired" target="_blank" class="project-link">Play DeadWired</a>
+      </div>
 
+    </div>
+  </section>
 
-  </div>
-</section>
-
-
-<!-- Contact / Links Section -->
-<section id="contact" class="section contact-section">
-  <h2>Contact & Links</h2>
-  <div class="contact-links">
-    <p>
-      <a href="/resume.pdf" target="_blank" class="contact-link">Resume</a> | 
-      <a href="https://rustvz.itch.io/" target="_blank" class="contact-link">Itch.io</a> | 
-      <a href="mailto:mattkin101@gmail.com" class="contact-link">Email</a> | 
-      <a href="https://www.linkedin.com/in/matthew-kin/" target="_blank" class="contact-link">LinkedIn</a>
-    </p>
-  </div>
-</section>
-
-
+  <!-- Contact -->
+  <section id="contact" class="section contact-section">
+    <h2>Contact & Links</h2>
+    <div class="contact-links">
+      <a href="resume.pdf" target="_blank">Resume</a> |
+      <a href="https://rustvz.itch.io/" target="_blank">Itch.io</a> |
+      <a href="mailto:mattkin101@gmail.com">Email</a> |
+      <a href="https://www.linkedin.com/in/matthewkin" target="_blank">LinkedIn</a>
+    </div>
+  </section>
 
   <script type="module" src="/src/main.ts"></script>
 </body>
