--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
+        <a href="gallery.html">Gallery</a>
       </div>
     </nav>
   </header>
@@ -73,6 +74,16 @@
 
     </div>
   </section>
+  
+  <!--Gallery  -->
+  <section id="projects" class="section projects-section">
+  <h2>Pixel Art Gallery</h2>
+  <!-- ... your projects ... -->
+
+  <div class="gallery-button-container">
+    <a href="gallery.html" class="gallery-button">View Pixel Art Gallery</a>
+  </div>
+</section>
 
   <!-- Contact -->
   <section id="contact" class="section contact-section">
