--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
   <title>Pixel Art Gallery</title>
   <link rel="icon" type="image/png" href="/Portfolio/rusTV.png" />
   <link rel="stylesheet" href="/style.css" />
-  <script type="module" crossorigin src="/Portfolio/assets/gallery-BL-nAv9m.js"></script>
+  <script type="module" crossorigin src="/Portfolio/assets/gallery-Be-IWO-r.js"></script>
   <link rel="modulepreload" crossorigin href="/Portfolio/assets/style-BTfQSqUT.js">
   <link rel="stylesheet" crossorigin href="/Portfolio/assets/style-CpGzZKFD.css">
 </head>
@@ -39,7 +39,7 @@
       <a href="/Portfolio/resume.pdf" target="_blank">Resume</a> |
       <a href="https://rustvz.itch.io/" target="_blank">Itch.io</a> |
       <a href="mailto:mattkin101@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/matthewkin" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/matthew-kin/" target="_blank">LinkedIn</a>
     </div>
   </section>
 
