Fixed LinkedIn Link, added few more sprites

--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
       <a href="/Portfolio/resume.pdf" target="_blank">Resume</a> |
       <a href="https://rustvz.itch.io/" target="_blank">Itch.io</a> |
       <a href="mailto:mattkin101@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/matthewkin" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/matthew-kin/" target="_blank">LinkedIn</a>
     </div>
   </section>
 
