--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <a href="resume.pdf" target="_blank">Resume</a> |
       <a href="https://rustvz.itch.io/" target="_blank">Itch.io</a> |
       <a href="mailto:mattkin101@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/matthewkin" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/matthew-kin/" target="_blank">LinkedIn</a>
     </div>
   </section>
 
