--- a/gallery.html
+++ b/gallery.html
@@ -6,9 +6,9 @@
   <title>Pixel Art Gallery</title>
   <link rel="icon" type="image/png" href="/Portfolio/rusTV.png" />
   <link rel="stylesheet" href="/style.css" />
-  <script type="module" crossorigin src="/Portfolio/assets/gallery-Be-IWO-r.js"></script>
-  <link rel="modulepreload" crossorigin href="/Portfolio/assets/style-BTfQSqUT.js">
-  <link rel="stylesheet" crossorigin href="/Portfolio/assets/style-CpGzZKFD.css">
+  <script type="module" crossorigin src="/Portfolio/assets/gallery-C6P-2-Wl.js"></script>
+  <link rel="modulepreload" crossorigin href="/Portfolio/assets/style-BuQCxhum.js">
+  <link rel="stylesheet" crossorigin href="/Portfolio/assets/style-D4NHQXuI.css">
 </head>
 <body id="galleryPage">
   <!-- Header / Navbar -->
@@ -36,14 +36,14 @@
   <!-- Optional Footer / Contact -->
   <section class="section contact-section">
     <div class="contact-links">
-      <a href="/Portfolio/resume.pdf" target="_blank">Resume</a> |
-      <a href="https://rustvz.itch.io/" target="_blank">Itch.io</a> |
+      <a href="resume.pdf" target="_blank" rel="noopener">Resume</a> |
+      <a href="https://rustvz.itch.io/" target="_blank" rel="noopener">Itch.io</a> |
       <a href="mailto:mattkin101@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/matthew-kin/" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/matthew-kin/" target="_blank" rel="noopener">LinkedIn</a>
     </div>
   </section>
 
-  <!-- Gallery JS -->
+  <!-- Gallery JS -->
 
   
 </body>
