--- a/gallery.html
+++ b/gallery.html
@@ -33,10 +33,10 @@
   <!-- Optional Footer / Contact -->
   <section class="section contact-section">
     <div class="contact-links">
-      <a href="/Portfolio/resume.pdf" target="_blank">Resume</a> |
-      <a href="https://rustvz.itch.io/" target="_blank">Itch.io</a> |
+      <a href="resume.pdf" target="_blank" rel="noopener">Resume</a> |
+      <a href="https://rustvz.itch.io/" target="_blank" rel="noopener">Itch.io</a> |
       <a href="mailto:mattkin101@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/matthew-kin/" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/matthew-kin/" target="_blank" rel="noopener">LinkedIn</a>
     </div>
   </section>
 
